# transaction

./: .gitignore
aqua/: node.aqua  validator.aqua
builtin-package/: contract_config.json
services/: Cargo.toml  Config.toml  build.sh
services/configs/: deploy-cfg.json
services/contract/: Cargo.toml
services/contract/src/: main.rs
services/ipfsdag/: Cargo.toml
services/ipfsdag/src/: main.rs
services/node/: Cargo.toml
services/node/src/: cron.rs  cron_tx.rs  data_types.rs  defaults.rs  error.rs  main.rs  meta_contract.rs  meta_contract_impl.rs  metadatas.rs  metadatas_impl.rs  storage_impl.rs  transaction.rs  transaction_receipt.rs  transactions_impl.rs  utils.rs  validators.rs
services/tmp/: node.db
services/types/src/: contract.rs  ipfs.rs  lib.rs
