[package]
name = "contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
marine-rs-sdk = { version = "0.7.1", features = ["logger"] }
log = "0.4.14"
wasmtime = "10.0.1"

types = { path = "../types" }